@@ -2202,3 +2202,4 @@
 20071024 machines/pentagon1024.c: move beta_reset() (Stuart).
 20071024 widget/filesel.c: move INPUT_KEY_Return handler into a function
 	 to simplify drive selection on Win32 (Stuart).
+20071024 widget/filesel.c: add drive selection for Win32 (Stuart).
